Don't give LogOnFailure its own package. Use Map.of instead of static initializer blocks